2009-09-08  Stephane Delcroix  <sdelcroix@novell.com>

	* downloader.h|.cpp: new MsiPolicy, like MediaPolicy but doesn't allow
	redirections (drt 874)

	* bitmapimage.h|bitmapimage.cpp: new SetDownloadPolicy () to override the
	bitmapimage policy;

	* multiscaleimage.cpp: use MsiPolicy, fixes drt 874.

	r: spouliot

2009-09-08  Sebastien Pouliot  <sebastien@ximian.com>

	* downloader.cpp: Skip redirection check if the source url is a
	local file.

	r: sde

2009-09-08  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* bitmapimage.cpp: CreateLoader: we were relying on an DownloadFailed
	event from the downloader after cancelling a resource request, this 
	is no longer true, so emit ImageFailed manually after calling Abort.

	r: sde

2009-09-08  Stephane Delcroix  <sdelcroix@novell.com>

	* deepzoomimagetilesource.cpp: don't render if any MSI extends
	is 0. avoid rendering an extra layer in some cases.

	r: rolf

2009-09-08  Stephane Delcroix  <sdelcroix@novell.com>

	* deepzoomimagetilesource.h|cpp: replace downloader usage by
	Application::GetResource (). Parses the xml stream as it comes,
	instead of all at once.

	r: kangaroo

2009-09-07  Chris Toshok  <toshok@ximian.com>

	* dependencyobject.cpp (DependencyObject::ProviderValueChanged):
	don't bail out early if both values are null, as the property
	might be AlwaysChange.
	(DependencyObject::ClearValue): same.

	r: kangaroo

2009-09-07  Stephane Delcroix  <sdelcroix@novell.com>

	* multiscaleimage.cpp: the tileLayer parameter is not the number 
	of layers to invalidate.

	r: shana

2009-09-07  Stephane Delcroix  <sdelcroix@novell.com>

	* multiscaleimage.cpp: InvalidateTileLayer no longer invalidate the
	full cache, but only the requested tiles.

	r: shana

2009-09-05  Stephane Delcroix  <sdelcroix@novell.com>

	* multiscaleimage.cpp:
	* deepzoomimagetilesource.h|cpp: do the same cleaning suffs (clearing
	the cache, aborting the downloaders, invalidating, etc...) on dzits 